# CalculationLib

./: CMakeLists.txt  CMakeLists.txt.back  CMakeUserPresets.json  README.md  conan.md  conanSetup.md  conanfile.py  dependencies.md  file.html  install_dependencies.md  library.h  package_generation.md  package_information.md  steps.md  todo.md
build_receipt/: conanfile.py
docs/: Boost.md  CICD.md  boost.md  conan.md  conanSetup.md  conanfile.md  install_dependencies.md  local_workflow.md  package_generation.md  package_information.md  package_testing.md  recipy_file.md  steps.md
docs/workflows/: new_package_creation.md  package_local_dev_workflow.md
src/: sxt_calc.cpp  sxt_calc_impl.h
sxt_calc/: CMakeLists.txt  conanfile.py
sxt_calc/src/: sxt_calc.cpp
sxt_calc/src/include/sxt_calc/: sxt_calc.h
test/: CMakeLists.txt
test_client/: CMakeLists.txt
test_client/src/: main.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  main.cpp
